<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android_lab_menu"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/btnWidgets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_1_widgets"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_2_login"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/btnCalculator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_3_calculator"/>

    <Button
        android:id="@+id/btnPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_4_popup_menu"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnLoginDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_5_login_dialog"
        android:layout_marginTop="10dp"/>

    <Button
        android:id="@+id/btnListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/question_6_student_listview"
        android:layout_marginTop="10dp"/>


</LinearLayout>
